# JunoCam_calibration_utils

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
create_dataset/: README.md  copy_data_for_unsb.py  create_databases.py  create_nc.sh  create_seg.sh  create_segments.py  params.py  utils.py
create_dataset/data/: get_links.sh  kmdeg_0.25.txt
evaluation/: README.md  evaluate_calibration.py  fid.py
evaluation/spectra/: karkoschka  mu10_pj19_IF_NAIC  muse_grs_spectrum  readme  vims_grs_carlson2016
mosaic/: README.md  create_mosaic.py  run_mosaic.sh  utils.py
postprocess/: README.md  create_FITS_export.py  create_geotiff_exports.py  merge_npys.py  plot geotiffs.ipynb  plot merged npy.ipynb
